# flamingo

./: .codespellrc  .coveragerc  .gitattributes  .gitignore  .travis.yml  CHANGELOG.rst  LICENCE  LICENSE  MANIFEST.in  Makefile  README.rst  REQUIREMENTS.dev.txt  lgtm.yaml  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini  vendor.yml
.github/workflows/: check-and-publish.yaml  ci.yaml  codeql.yml  docs.yml  main.yml
doc/: Makefile  REQUIREMENTS.txt  api.rst  bootstrapping.rst  contributing.rst  data_model.rst  interactive-shell.rst  live-server.rst  menu.py  recipes.rst  settings.py  settings.rst  writing_content.rst  writing_plugins.rst  writing_themes.rst
doc/content/: index.rst
doc/content/cookbook/: how_to_add_a_jinja2_filter.rst  how_to_add_a_rst_directive.rst  how_to_use_settings_hooks.rst  how_to_write_a_parser.rst  how_to_write_a_plugin.rst
doc/content/developer/: data_model.rst  how_to_contribute.rst
doc/content/doc/: basic_concepts.rst  data_model.rst  installation.rst  settings.rst  writing_content.rst  writing_plugins.rst
doc/content/input_formats/: html.rst  markdown.rst  restructuredtext.rst  yaml.rst
doc/content/plugins/: authors.rst  feeds.rst  git.rst  i18n.rst  jquery.rst  layers.rst  markdown.rst  menu.rst  photoswipe.rst  redirects.rst  rst_bootstrap3.rst  tags.rst  thumnails.rst  time.rst
doc/content/themes/: bootstrap.rst  readthedocs.rst
doc/content/user/: basic_concepts.rst  (+5 more)
doc/plugins/: authors.rst  data.py  feeds.rst  i18n.rst  layers.rst  redirects.rst  rst_bootstrap3.rst  rst_pygments.rst  rst_setting.py  rst_table.py  tags.rst  time.rst
flamingo/: __init__.py  default_settings.py  pytest.py
flamingo-web.org/: Makefile  REQUIREMENTS.txt  settings.py
flamingo-web.org/plugins/: data.py  table.py
flamingo/core/: context.py  data_model.py  errors.py  parser.py  settings.py  types.py
flamingo/legacy_server/: exporter.py
flamingo/plugins/: __init__.py  authors.py  feeds.py  git.py  html.py  i18n.py  ini.py  layers.py  md.py  metaFile.py  redirects.py  tags.py  thumbnails.py  time.py  yaml.py
flamingo/project_templates/: data.ini
flamingo/server/: __init__.py  build_environment.py  exporter.py  frontend_controller.py  index.html  logging.py  main.js  rpc.py  server.py  style.css  watcher.py
flamingo/server2/: build_environment.py  logging.py  rpc.py  server.py
tests/: conftest.py  test_core_context_build.py  test_core_data_model.py  test_core_layers.py  test_core_media.py  test_core_parser_base.py  test_core_parser_html.py  test_core_parser_md.py  test_core_parser_rst.py  test_core_plugin_api.py  test_core_project_templates.py  test_core_rendering.py  test_core_settings.py  test_core_utils_aiohttp.py  test_core_utils_aionotify.py  test_core_utils_cli.py  test_core_utils_pagination.py  test_documentation.py  test_flamingo-web-org.py  test_package.py  test_plugin_Authors.py  test_plugin_Feeds.py  test_plugin_Git.py  test_plugin_I18N.py  test_plugin_Redirects.py  test_plugin_Tags.py  test_plugin_Thumbnails.py  test_plugin_Time.py  test_plugin_rstBootstrap3.py  test_plugin_rstLink.py  test_plugin_rstPygments.py  test_pytest.py  test_server.py
tests/flamingo-test-package/: setup.py
(+128 files in other folders)
