[metadata]
description = Flamingo is a python3-based, pelican-inspired static site generator
long_description = file: README.rst
license_file = LICENCE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Web Environment
    Framework :: AsyncIO
    Framework :: IPython
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: Unix
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Documentation
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Documentation
    Topic :: Text Processing
    Topic :: Text Processing :: Markup :: HTML
    Topic :: Text Processing :: Markup :: XML
    Topic :: Utilities
